Various layout issues

--- a/saleor/static/scss/components/_filters.scss
+++ b/saleor/static/scss/components/_filters.scss
@@ -1,5 +1,5 @@
 .product-filters {
-  padding-bottom: $global-padding * 2;
+  padding-bottom: $global-padding * .5;
   .hide {
     display: none;
   }
@@ -86,7 +86,7 @@
   }
   &__title {
     @include media-breakpoint-down(sm) {
-      padding: $global-padding *2 0;
+      padding: $global-padding *.5 0;
     }
     @media (max-width: 370px) {
       padding-top: 5rem;
